Increase z-index to prevent other components overlap navbar

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -6,7 +6,7 @@
   padding: 0 5rem;
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   & a {
     text-decoration: none;
   }
